# 3D-Reconstruction_Yimu

./: README.md
TurboReg/: CMakeLists.txt  README.md  icp_registration_info.txt  icp_transformation.txt  readme.md  source_registered.ply  source_registered2.ply  source_registered3.ply  source_registered4.ply  source_registered5.ply  tie34.ply  tie346.ply  tie346_registration_info.txt  tie346_transform.txt
TurboReg/bindings/: CMakeLists.txt  __init__.py  pybinding.cpp  setup.py
TurboReg/demo_cpp/: CMakeLists.txt  corr_fpfh.cpp
TurboReg/demo_data/: 000_fpfh_kpts_dst.txt  000_fpfh_kpts_src.txt  000_pts_dst.ply  000_pts_src.ply  000_trans.txt  010_fpfh_kpts_dst.txt  010_fpfh_kpts_src.txt  010_pts_dst.ply  010_pts_src.ply  010_trans.txt  020_fpfh_kpts_dst.txt  020_fpfh_kpts_src.txt  020_pts_dst.ply  020_pts_src.ply  020_trans.txt  030_fpfh_kpts_dst.txt  030_fpfh_kpts_src.txt  030_pts_dst.ply  030_pts_src.ply  030_trans.txt  040_fpfh_kpts_dst.txt  040_fpfh_kpts_src.txt  040_pts_dst.ply  040_pts_src.ply  040_trans.txt  050_fpfh_kpts_dst.txt  050_fpfh_kpts_src.txt  050_pts_dst.ply  050_pts_src.ply  050_trans.txt  060_fpfh_kpts_dst.txt  060_fpfh_kpts_src.txt  060_pts_dst.ply  060_pts_src.ply  060_trans.txt  070_fpfh_kpts_dst.txt  070_fpfh_kpts_src.txt  070_pts_dst.ply  070_pts_src.ply  070_trans.txt  (+15 more)
TurboReg/demo_py/: dataset_3dmatch.py  exp_3dmatch.py  icp_registration.py  multi_pointcloud_registration.py  o3d_fpfh.py  utils_pcr.py
TurboReg/turboreg/: CMakeLists.txt
TurboReg/turboreg/src/: core_turboreg_gpu.cpp  model_selection.cpp  rigid_transform.cpp  turboreg.cpp  (+1 more)
(+35 files in other folders)
